<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_challenge_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="78dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/challenge_title"
        android:textAppearance="@style/TextAppearance.AppCompat.title1"
        android:textColor="@color/color_gray_900"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_challenge_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/color_gray_300"
        android:gravity="center"
        android:hint="@string/challenge_hint"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.title2"
        android:textColorHint="@color/color_gray_300"
        app:layout_constraintTop_toBottomOf="@id/tv_challenge_title"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_count"
        android:textAppearance="@style/TextAppearance.AppCompat.body2"
        android:textColor="@color/color_gray_400"
        app:layout_constraintEnd_toEndOf="@id/et_challenge_input"
        app:layout_constraintTop_toBottomOf="@id/et_challenge_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_main2_radius_30"
        android:minHeight="0dp"
        android:paddingVertical="21dp"
        android:text="@string/challenge_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.title2"
        android:textColor="@color/color_main1"
        app:layout_constraintTop_toBottomOf="@id/et_challenge_input" />

</androidx.constraintlayout.widget.ConstraintLayout>